# links_tg_bot

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/db/: database.py  models.py  schemas.py
src/telegram/: bot.py
src/telegram/dialogs/: add_post.py  get_posts.py  main.py
