[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Psycho Asto <kuvaldinms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram-dialog = "^2.1.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
